syntax = "proto3";


package pb;

import "user.proto";

option go_package = "simple-bank/pb";


message LoginUserRequest {
  string username =1;
  string password = 2;
}

message LoginUserResponse {
  string access_token  = 1;
  User user = 2;
}