syntax = "proto3";


package pb;

import "google/api/annotations.proto";

import "rpc_login_user.proto"; 
import "rpc_create_user.proto"; 
import "rpc_update_user.proto"; 
import "protoc-gen-openapiv2/options/annotations.proto";


option go_package = "simple-bank/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Simple Bank"
    version: "1.2"
    contact: {
      name: "Aditya Putra Pratama"
      url: "https://github.com/adityaputra42"
      email: "aditiyaputra42@gmail.com"
    }
    
  }
};

service SimpleBank {
  rpc CreateUser(CreateUserRequest)returns(CreateUserResponse) {
    option (google.api.http) = {
           post: "/v1/create_user"
           body: "*"
         };

         option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this Api to create a new user"
          summary: "Create New User"
          
        };
  }
  rpc UpdateUser(UpdateUserRequest)returns(UpdateUserResponse) {
    option (google.api.http) = {
           post: "/v1/update_user"
           body: "*"
         };

         option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this Api to update a user"
          summary: "Update User"
          
        };
  }
  rpc LoginUser(LoginUserRequest)returns(LoginUserResponse) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this Api to login user"
      summary: "login user User"
      
    };
  }
}